wordpress/templates/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress  # Avoid using default namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      automountServiceAccountToken: false  # Disable the automatic mounting of service account tokens if not needed
      securityContext:
        runAsNonRoot: true  # Ensure the container does not run as root
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL  # Drop all unnecessary capabilities
      containers:
        - name: wordpress
          image: wordpress:6.7
          imagePullPolicy: Always  # Enforcing Always pull policy
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
          resources:
            requests:
              memory: "256Mi"  # Setting memory requests
              cpu: "250m"  # Setting CPU requests
            limits:
              memory: "512Mi"  # Setting memory limits
              cpu: "500m"  # Setting CPU limits
          livenessProbe:
            httpGet:
              path: /wp-admin
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /wp-admin
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          securityContext:
            runAsNonRoot: true  # Ensure the container doesn't run as root
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL  # Drop all unnecessary capabilities
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-pvc
