wordpress/templates/cm-acme-http-solver.yaml
apiVersion: v1
kind: Service
metadata:
  name: cm-acme-http-solver
  namespace: wordpress
spec:
  ports:
    - port: 80
      targetPort: 8089
  selector:
    app: cert-manager
    acme-http-solver: "true"
